Put the overflow fix in the right less-file
After feedback in the pullrequest

--- a/root/static/less/syntaxhighlighter.less
+++ b/root/static/less/syntaxhighlighter.less
@@ -1,6 +1,7 @@
 html body .syntaxhighlighter {
     font-size: 100% !important;
     margin: 0 !important;
+    overflow: visible !important;
     /* needs higher specificity than the syntax highligher's rules */
     &, *, * *, * * *, * * * * {
         font-family: inherit !important;
